--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-Hello world
-maurice hooks
-CSCE 190 site
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: maurice hooks</title>
+    </head>
+    <body>
+        <h1>maurice hooks CSCE 190 Site</h1>
+
+        <Section class="assignment">
+            <a href="files/problem-statement.pdf><img src="images/problem-statement.png"></a>
+            <section class="ass-details">
+                <a href="files/problem-statement.pdf> "<h2>Problem Statement: Trail Mix </h2></a>
+                </section>
+                <p>
+                    People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
+about the safety of the street they are walking in, especially if they are new to the area. Having no clue 
+where dangerous areas are located increases the vulnerability of individuals that may not have the 
+option of having a quick getaway car nearby to escape potentially dangerous situations.
+                </p>
+                
+            </section>
+        </Section>
+    </body>
