--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <Section class="assignment">
             <a href="files/problem-statement.pdf><img src="images/problem-statement.png"></a>
             <section class="ass-details">
-                <a href="files/problem-statement.pdf> "<h2>Problem Statement: Trail Mix </h2></a>
+                <a href="files/problem-statement.pdf>"<h2>Problem Statement: Safe streets </h2></a>
                 </section>
                 <p>
                     People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
