--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <body>
         <h1>maurice hooks CSCE 190 Site</h1>
 
-        <Section class="assignment">
+        <section class="assignment">
             <img src="images/problem-statement.png"
             <section class="ass-details">
-                <a href="files/problem-statement.pdf> "<h2>Problem Statement: Safe streets </h2></a>
-            </section>
+             "<h2>Problem Statement: Safe streets </h2>
                 <p>
                     People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
 about the safety of the street they are walking in, especially if they are new to the area. Having no clue 
@@ -19,5 +18,5 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                 </p>
                 
             </section>
-        </Section>
+        </section>
     </body>
