--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1>maurice hooks CSCE 190 Site</h1>
 
         <section class="assignment">
-            <img src="images/problem-statement.png"
+           <a href="files/problem statement.CSCE 190.pdf" <img src="images/problem-statement.png"
             <section class="ass-details">
              "<h2>Problem Statement: Safe streets </h2>
                 <p>
