--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <section class="assignment">
            <a href="files/problem statement.CSCE 190.pdf" <img src="images/problem-statement.png"
             <section class="ass-details">
-             "<h2>Problem Statement: Safe streets </h2>
+                <a href="files/problem statement.CSCE 190.pdf" "<h2>Problem Statement: Safe streets </h2>
                 <p>
                     People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
 about the safety of the street they are walking in, especially if they are new to the area. Having no clue 
