--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <section class="assignment">
            <a href="files/problem statement.CSCE 190.pdf" <img src="images/problem-statement.png"></a>
             <section class="ass-details">
-             "<h2>Problem Statement: Safe streets </h2></a>
+                a href="files/problem statement.CSCE 190.pdf" "<h2>Problem Statement: Safe streets </h2></a>
                 </section>
                 <p>
                     People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
