--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
         <h1>maurice hooks CSCE 190 Site</h1>
 
         <section class="assignment">
-           <img src="images/problem-statement.png">
+           <a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
             <section class="ass-details">
-                a href="files/problem statement.CSCE 190.pdf" "<h2>Problem Statement: Safe streets </h2></a>
-                </section>
+                a href="files/problem-statement.pdf"><h2>Problem statement: Safe Streets</h2></a>
                 <p>
                     People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
 about the safety of the street they are walking in, especially if they are new to the area. Having no clue 
 where dangerous areas are located increases the vulnerability of individuals that may not have the 
 option of having a quick getaway car nearby to escape potentially dangerous situations.
                 </p>
-                
             </section>
         </section>
     </body>
+    </html>
