--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <h1>maurice hooks CSCE 190 Site</h1>
 
         <section class="assignment">
-           <a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
+           ><img src="images/problem-statement.png"></a>
             <section class="ass-details">
-                a href="files/problem-statement.pdf"><h2>Problem statement: Safe Streets</h2></a>
+               <h2>Problem statement: Safe Streets</h2></a>
                 <p>
                     People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
 about the safety of the street they are walking in, especially if they are new to the area. Having no clue 
