--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>maurice hooks CSCE 190 Site</h1>
 
+        <! -- Problem Statement Assingment-->
         <section class="assignment">
          <a href ="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
             <section class="ass-details">
@@ -18,5 +19,16 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                 </p>
             </section>
         </section>
+
+        <! -- Affinity Diagram Assingment-->
+        <section class="assignment">
+            <a href ="files/Affinity-Diagram.pdf"><img src="images/affinity-diagram.png"></a>
+               <section class="ass-details">
+                   <a href ="files/Affinity-Diagram.pdf"> <h2>Affinity diagram: Safe Streets</h2></a>
+                   <p>
+                      Me and my team came together to think of ways to setup our safe Streets project
+                   </p>
+               </section>
+           </section>
     </body>
     </html>
