--- a/index.html
+++ b/index.html
@@ -27,9 +27,20 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                <section class="ass-details">
                    <a href ="files/Affinity-Diagram.pdf"> <h2>Affinity diagram: Safe Streets</h2></a>
                    <p>
-                      Me and my team came together to think of ways to setup our safe Streets project
+                      Me and my team came together to think of ways to setup our Safe Streets project
                    </p>
                </section>
-           </section>
+           </section> 
+
+           <! -- Personas Assingment-->
+           <section class="assignment">
+               <a href ="files/Personas.pdf"><img src="images/persona.png"></a>
+                  <section class="ass-details">
+                      <a href ="files/Personas.pdf"> <h2>Persona: Rebecca bernington </h2></a>
+                      <p>
+                         Persona of a user of our Safe Streets app
+                      </p>
+                  </section>
+              </section>
     </body>
     </html>
