--- a/index.html
+++ b/index.html
@@ -7,62 +7,68 @@
     <body>
         <h1>Maurice hooks CSCE 190 Site</h1>
 
-        <! -- Problem Statement Assingment-->
-        <section class="assignment">
-         <a href ="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
-            <section class="ass-details">
+        <div class="assignments">
+            <! -- Problem Statement Assingment-->
+            <section class="assignment">
                 <a href ="files/problem-statement.pdf"> <h2>Problem statement: Safe Streets</h2></a>
-                <p>
-                    People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
+                <a href ="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
+            <p>
+                People who walk around instead of relying on vehicular transportation may at some point feel uncertain 
 about the safety of the street they are walking in, especially if they are new to the area. Having no clue 
 where dangerous areas are located increases the vulnerability of individuals that may not have the 
 option of having a quick getaway car nearby to escape potentially dangerous situations.
-                </p>
+            </p>
             </section>
-        </section>
 
-        <! -- Affinity Diagram Assingment-->
-        <section class="assignment">
-            <a href ="files/Affinity-Diagram.pdf"><img src="images/affinity-diagram.png"></a>
-               <section class="ass-details">
-                   <a href ="files/Affinity-Diagram.pdf"> <h2>Affinity diagram: Safe Streets</h2></a>
-                   <p>
-                      Me and my team came together to think of ways to setup our Safe Streets project
-                   </p>
-               </section>
-           </section> 
+            <! -- Affinity Diagram Assingment-->
+            <section class="assignment">
+                <a href ="files/Affinity-Diagram.pdf"> <h2>Affinity diagram: Safe Streets</h2></a>
+                <a href ="files/Affinity-Diagram.pdf"><img src="images/affinity-diagram.png"></a>
+                    <p>
+                        Me and my team came together to think of ways to setup our Safe Streets project
+                    </p>
+                </section>
+            </section> 
 
-           <! -- Personas Assingment-->
-           <section class="assignment">
-               <a href ="files/Personas.pdf"><img src="images/persona.png"></a>
-                  <section class="ass-details">
-                      <a href ="files/Personas.pdf"> <h2>Persona: Rebecca bernington </h2></a>
-                      <p>
-                         Persona of a user of our Safe Streets app
-                      </p>
-                  </section>
-              </section>
+            <! -- Personas Assingment-->
+            <section class="assignment">
+                <a href ="files/Personas.pdf"> <h2>Persona: Rebecca bernington </h2></a>
+                <a href ="files/Personas.pdf"><img src="images/persona.png"></a>
+                        <p>
+                            Persona of a user of our Safe Streets app
+                        </p>
+                    </section>
+                </section>
 
-              <! --     Storyboard Assingment-->
-           <section class="assignment">
-               <a href ="files/Storyboard team.pdf"><img src="images/storyboard.png"></a>
-                  <section class="ass-details">
-                      <a href ="files/Storyboard team.pdf"> <h2>StoryBoard: Team Personas </h2></a>
-                      <p>
-                         Persona provide examples of a user using our Safe Streets app
-                      </p>
-                  </section>
-              </section>
+                <! --     Storyboard Assingment-->
+            <section class="assignment">
+                <a href ="files/Storyboard team.pdf"> <h2>StoryBoard: Team Personas </h2></a>
+                <a href ="files/Storyboard team.pdf"><img src="images/storyboard.png"></a>
+                        <p>
+                            Persona provide examples of a user using our Safe Streets app
+                        </p>
+                    </section>
+                </section>
 
-              <! --     Sketches Assingment-->
-           <section class="assignment">
-               <a href ="files/Sketches.pdf"><img src="images/sketches.png"></a>
-                  <section class="ass-details">
-                      <a href ="files/Skecthes.pdf"> <h2>StoryBoard: Sketches </h2></a>
-                      <p>
-                         Skecthes our ideas on how the app may look
-                      </p>
-                  </section>
-              </section>
+                <! --     Sketches Assingment-->
+            <section class="assignment">
+                <a href ="files/Skecthes.pdf"> <h2>StoryBoard: Sketches </h2></a>
+                <a href ="files/Sketches.pdf"><img src="images/sketches.png"></a>
+                        <p>
+                            Skecthes our ideas on how the app may look
+                        </p>
+                    </section>
+                </section>
+
+                <! --     Prototype Assingment-->
+            <section class="assignment">
+                <a href ="https://www.youtube.com/watch?v=mB2E-kVhwvI"> <h2>Paper-Prototype </h2></a>
+                <a href ="https://www.youtube.com/watch?v=mB2E-kVhwvI"><img src="images/paper-prototype.png"></a>
+                        <p>
+                            A walktrough of a potential look of our apps screens on paper
+                        </p>
+                    </section>
+                </section>
+            </div>
     </body>
     </html>
