--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                     <p>
                         Me and my team came together to think of ways to setup our Safe Streets project
                     </p>
-                </section>
             </section> 
 
             <! -- Personas Assingment-->
@@ -47,7 +46,6 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                         <p>
                             Persona provide examples of a user using our Safe Streets app
                         </p>
-                    </section>
                 </section>
 
                 <! --     Sketches Assingment-->
@@ -57,7 +55,6 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                         <p>
                             Skecthes our ideas on how the app may look
                         </p>
-                    </section>
                 </section>
 
                 <! --     Prototype Assingment-->
@@ -67,7 +64,14 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                         <p>
                             A walktrough of a potential look of our apps screens on paper
                         </p>
-                    </section>
+                </section>
+                <! --    hi fi Prototype Assingment-->
+            <section class="assignment">
+                <a href ="files/hi-fi-prototype/src/index.html"> <h2>Paper-Prototype </h2></a>
+                <a href ="files/hi-fi-prototype/src/index.html"><img src="images/hi-fi-prototype.png"></a>
+                        <p>
+                            A scenario and task and the outcome of usability task
+                        </p>
                 </section>
             </div>
     </body>
