--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ option of having a quick getaway car nearby to escape potentially dangerous situ
                 </section>
                 <! --    hi fi Prototype Assingment-->
             <section class="assignment">
-                <a href ="files/hi-fi-prototype/src/index.html"> <h2>Paper-Prototype </h2></a>
+                <a href ="files/hi-fi-prototype/src/index.html"><h2>hi-fi-Prototype </h2></a>
                 <a href ="files/hi-fi-prototype/src/index.html"><img src="images/hi-fi-prototype.png"></a>
                         <p>
                             A scenario and task and the outcome of usability task
