--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,1 +1,10 @@
-HELLO MAURICE!
+<!DOCTYPE html>
+<html>
+   <head>
+
+    </head>
+    <body>
+      <h1> My assignmnet Page</h1>
+      <a href = "exercises/01_html/index.html">Exercise 1</a>
+    </body>
+</html>
