added my first index

--- a/csce242/exercises/index.html
+++ b/csce242/exercises/index.html
@@ -16,7 +16,8 @@
         <li><em> algea</em></li>
         <li><strong> sharks</strong></li>
        </ul>
-       <img src="images/sea turtle.jpg"> alt="Cute Baby Sea Turtles"><br>
+       <img src="images/sea turtle.jpg" alt="Cute Baby Sea Turtles"
+       ><br>
 
        <a href = "https://theturtlesource.com/">Cute Baby turle Site</a>
     </body>
