--- a/csce242/index.html
+++ b/csce242/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
       <h1> My assignmnet Page</h1>
-      <a href = "exercises/01_html/index.html">Exercise 1</a>
+      <a href = "exercises/index.html">Exercise 1</a>
     </body>
 </html>
