my first assignment

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-      <h1> My assignmnet Page</h1>
+      <h1> My excersises Page</h1>
       <a href = "exercises/index.html">Exercise 1</a>
     </body>
 </html>
