my first assingment

--- a/csce242/assignments/index.html
+++ b/csce242/assignments/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-         <!-- My turtle site -->
-            <title>Turtle</title>
+         
+            <title>Dragons</title>
     </head>
     <body>
         <h1>csce 242 </h1>
