my first assignment

--- a/csce242/assignments/index.html
+++ b/csce242/assignments/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-         
-            <title>Dragons</title>
+             <!-- Maurice Hooks csce 242 -->
+            <title>Cool Dragons</title>
     </head>
     <body>
-        <h1>csce 242 </h1>
-        <h2> by maurice hooks</h2>
-       <p> In this class we learn how to develop and design websites</p>
+        <h2><em>  Dragons </em> </h2>
+        <p> This is a website with cool looking dragons. I made this site becuase i always liked dragons and thought it would be cool to do this.
+        For this assingment i decided to grab a picture of 2 dragons from video games you may or may not have heard of. The name of these dragons are fatalis and spyro.</p>
+        </p>
 
-       <h2>Assingments </h2>
-       <ul>
-        <li> assignment 1</li>
-        <li><em> assignment 2</em></li>
-        <li> assignment 3</li>
-       </ul>
-       
+        <p> The black dragon fatalis is from the game monster hunter and the apex of elders dragons in its world. In terms of age and power fatalis is said to be the strongest of its kind</p>
+        <p> the blue dragons name is Spryo the dragon.  Spyro is a master of the elements like earth,ice,fire, and even darkness. These dragons are both very powerful</p>
+        <img  src = "images/dragon.jpg" 
+        <br>
+        <img src = "images/spyro dragon.jpg"
+
+        <h2> dragon abilities</h2>
+            <ul>
+            <li> fire breath</li>
+            <li> can fly </li>
+            <li> walk on four legs </li>
+           </ul>
+       <a href = "https://monsterhunter.tools/mhw/monsters/fatalis/"> dragon image </a> 
+       <a href = "https://tvtropes.org/pmwiki/pmwiki.php/VideoGame/TheLegendOfSpyro" > dragon image 2 </a>
+    </body>
