--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,7 +4,13 @@
 
     </head>
     <body>
-      <h1> My excersises Page</h1>
-      <a href = "exercises/index.html">Exercise 1</a>
+      <h1>csce 242 </h1>
+     <h2><em> by maurice hooks</em> </h2>
+     <p>In this class we learn how to develop and design websites</p>
+      <h2>Assignments </h2>
+       <ul>
+        <li> assignment 1</li>
+       </ul>
+      <a href = "assignments/index.html">assingment 1</a>
     </body>
 </html>
