my first assignment

--- a/csce242/assignments/index.html
+++ b/csce242/assignments/index.html
@@ -6,15 +6,12 @@
     </head>
     <body>
         <h2><em>  Dragons </em> </h2>
-        <p> This is a website with cool looking dragons. I made this site becuase i always liked dragons and thought it would be cool to do this.
-        For this assingment i decided to grab a picture of 2 dragons from video games you may or may not have heard of. The name of these dragons are fatalis and spyro.</p>
-        </p>
-
-        <p> The black dragon fatalis is from the game monster hunter and the apex of elders dragons in its world. In terms of age and power fatalis is said to be the strongest of its kind</p>
-        <p> the blue dragons name is Spryo the dragon.  Spyro is a master of the elements like earth,ice,fire, and even darkness. These dragons are both very powerful</p>
-        <img  src = "images/dragon.jpg" 
+        <p> This is a website with cool looking dragons. I made this site becuase i always liked dragons and thought it would be cool to do this. For this assingment i decided to grab a picture of 2 dragons from video games you may or may not have heard of. The name of these dragons are fatalis and spyro.</p>
+        <p> The black dragon fatalis is from the game monster hunter and the apex of elders dragons in its world. In terms of age and power fatalis is said to be the strongest of its kind
+         the blue dragons name is Spryo the dragon.  Spyro is a master of the elements like earth,ice,fire, and even darkness. These dragons are both very powerful</p>
+        <img  src = "images/dragon.jpg" alt ="Image of fatalis">
         <br>
-        <img src = "images/spyro dragon.jpg"
+        <img src = "images/spyro dragon.jpg" alt = "Image of spyro">
 
         <h2> dragon abilities</h2>
             <ul>
