my first assingment

--- a/csce242/assignments/index.html
+++ b/csce242/assignments/index.html
@@ -2,25 +2,44 @@
 <html>
   <head>
              <!-- Maurice Hooks csce 242 -->
-            <title>Cool Dragons</title>
+            <title> Cool Dragons</title>
  </head>
                                    <body>
-                     <h2><em>  Dragons </em> </h2>
-        <p> This is a website with cool looking dragons. I made this site becuase i always liked dragons and thought it would be cool to do this. For this assingment i decided to grab a picture of 2 dragons from video games you may or may not have heard of. The name of these dragons are fatalis and spyro.</p>
-        <p> The black dragon fatalis is from the game monster hunter and the apex of elders dragons in its world. In terms of age and power fatalis is said to be the strongest of its kind
-         the blue dragons name is Spryo the dragon.  Spyro is a master of the elements like earth,ice,fire, and even darkness. These dragons are both very powerful</p>
+                     <h1><em> &Omega; Dragons &Omega; </em> </h1>
+                     <h2> Iconic dragons</h2>
+        <p> This is a website with cool looking dragons that you may or may not have seen before. I made this site becuase i always liked dragons and thought it would be cool to do this. For this project i decided to grab a picture of 2 dragons from video games you may or may not have heard of. The name of these dragons are <b>fatalis</b> and <b>spyro</b>.
+           </p>
+        <p> The <strong>black dragon </strong> fatalis is from the game monster hunter and the apex of elders dragons in its world. In terms of age and power fatalis is said to be the strongest of its kind.
+            The  <strong>purple dragon </strong> Spryo the dragon is like the avatar of his world or chosen one. Spyro is a master of the elements like earth,ice,fire,electricity and even time. These dragons are both very powerful and not to be messed with.
+            </p>
 
         <img  src = "images/dragon.jpg" alt ="Image of fatalis">
+        <a href = "https://monsterhunter.tools/mhw/monsters/fatalis/"> dragon image </a>
         <br>
+        <p>
         <img src = "images/spyro dragon.jpg" alt = "Image of spyro">
-
-        <h2> dragon abilities</h2>
+        <a href = "https://tvtropes.org/pmwiki/pmwiki.php/VideoGame/TheLegendOfSpyro" > dragon image 2 </a>
+        </p>
+        <h2> Dragon characteristics</h2>
             <ul>
-            <li> fire breath</li>
+            <li> horns</li>
             <li> can fly </li>
             <li> walk on four legs </li>
            </ul>
-       <a href = "https://monsterhunter.tools/mhw/monsters/fatalis/"> dragon image </a> 
-       <a href = "https://tvtropes.org/pmwiki/pmwiki.php/VideoGame/TheLegendOfSpyro" > dragon image 2 </a>
+           <table>
+            <tr>
+              <th> Dragon</th> 
+              <th>Powers</th>
+            </tr>
+            <tr>
+              <td>Fatalis</td>
+              <td>extreme physical strength and recovery, fire breath</td>
+            </tr>
+            <tr>
+              <td>Spyro</td>
+              <td>elemental breath, high mobility</td>
+            </tr>
+           </table>
+       
                                  </body>
    </html>                           
