--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,8 +4,8 @@
 
     </head>
     <body>
-      <h1>csce 242 </h1>
-     <h2><em> by maurice hooks</em> </h2>
+      <h1>Csce 242 </h1>
+     <h2><em> By maurice hooks</em> </h2>
      <p>In this class we learn how to develop and design websites</p>
       <h2>Assignments </h2>
        <ul>
