my first assingment added

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,13 +4,12 @@
 
     </head>
     <body>
-      <h1>Csce 242 </h1>
+      <h1>CSCE 242 </h1>
      <h2><em> By maurice hooks</em> </h2>
      <p>In this class we learn how to develop and design websites</p>
       <h2>Assignments </h2>
        <ul>
-        <li> assignment 1</li>
+        <li><a href = "assignments/index.html">assingment 1</a></li>
        </ul>
-      <a href = "assignments/index.html">assingment 1</a>
     </body>
 </html>
