added second assignment

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -9,7 +9,8 @@
      <p>In this class we learn how to develop and design webpages using HTML,CSS and javascript matching descriptions of assignments what we are given. We use Javascript for the basic fuctions of our websites and expand from there with each upcoming assignment. Throught this we develop skills neccesary for our future careers  </p>
       <h2>Assignments </h2>
        <ul>
-        <li><a href = "assignments/index.html">assingment 1</a></li>
+        <li><a href = "assignments/assignment 1/index.html">assingment 1</a></li>
+        <li><a href = "assignments/assignment 2/index.html">assingment 2</a></li>
        </ul>
     </body>
 </html>
