my second assingment

--- a/csce242/assignments/assignment 2/index.html
+++ b/csce242/assignments/assignment 2/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="content">
-            <h1>&hearts; Ninjas &hearts;</h1>
+            <h1> &#9775; Ninjas &#9775;</h1>
 
             <nav id="main-nav">
                 <ul>
@@ -31,9 +31,9 @@
         </div>
         <table id="Ninja-facts">
             <tr>
-                <th>Aspect</th>
+                <th>Topic</th>
                 <th>Details</th>
-                <th>Interesting Fact</th>
+                <th>Facts</th>
             </tr>
             <tr>
                 <td>Origin</td>
