My first assignment

--- a/csce242/assignments/assignment 1/index.html
+++ b/csce242/assignments/assignment 1/index.html
@@ -22,9 +22,9 @@
         </p>
         <h2> Dragon characteristics</h2>
             <ul>
-            <li> horns</li>
-            <li> can fly </li>
-            <li> walk on four legs </li>
+            <li> Horns</li>
+            <li> Can fly </li>
+            <li> Walk on four legs </li>
            </ul>
            <table>
             <tr>
