my second assingment

--- a/csce242/assignments/assignment 2/index.html
+++ b/csce242/assignments/assignment 2/index.html
@@ -48,7 +48,7 @@
             <tr>
                 <td>Tools</td>
                 <td>Shuriken and kunai</td>
-                <td>Shuriken were used to distract or harm enemies, while kunai were versatile tools and weapons</td>
+                <td>Shuriken were used to distract or harm enemies, while kunai could be used as a knife, a trowel and even a lock prying tool</td>
             </tr>
             <tr>
                 <td>Clothing</td>
