My 3rd assignment done

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
-<html>
-   <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSCE 242</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <!-- Header Section -->
+    <header>
+        <h1>CSCE 242</h1>
+        <p>By Maurice Hooks</p>
+    </header>
 
-    </head>
-    <body>
-      <h1>CSCE 242 </h1>
-     <h2><em> By maurice hooks</em> </h2>
-     <p>In this class we learn how to develop and design webpages using HTML,CSS and javascript matching descriptions of assignments what we are given. We use Javascript for the basic fuctions of our websites and expand from there with each upcoming assignment. Throught this we develop skills neccesary for our future careers  </p>
-      <h2>Assignments </h2>
-       <ul>
-        <li><a href = "assignments/assignment 1/index.html">assingment 1</a></li>
-        <li><a href = "assignments/assignment 2/index.html">assingment 2</a></li>
-       </ul>
-    </body>
+    <!-- Main Content Section -->
+    <main>
+        <!-- Introduction -->
+        <section class="intro">
+            <p>In this class, we learn how to develop and design webpages using HTML, CSS, and JavaScript. We start with basic functions and expand with each assignment, building skills necessary for our future careers.</p>
+        </section>
+
+        <!-- Assignments Section -->
+        <section class="assignments">
+            <h2>Assignments</h2>
+            <div class="assignment-list">
+                <!-- Assignment 1 -->
+                <div class="assignment">
+                    <h3>Assignment 1 - Basic HTML</h3>
+                    <img src="https://via.placeholder.com/300x150" alt="Placeholder image for Assignment 1">
+                    <p>This assignment covers the basics of HTML. We learned how to structure a webpage using various HTML tags and elements.</p>
+                    <a href="assignments/assignment 1/index.html">View Assignment</a>
+                </div>
+
+                <!-- Assignment 2 -->
+                <div class="assignment">
+                    <h3>Assignment 2 - Basic CSS</h3>
+                    <img src="https://via.placeholder.com/300x150" alt="Placeholder image for Assignment 2">
+                    <p>This assignment introduces CSS. We learned how to style HTML elements and create a visually appealing webpage layout.</p>
+                    <a href="assignments/assignment 2/index.html">View Assignment</a>
+                </div>
+
+                <!-- Assignment 3 -->
+                <div class="assignment">
+                    <h3>Assignment 3 - Page Layout</h3>
+                    <img src="https://via.placeholder.com/300x150" alt="Placeholder image for Assignment 3">
+                    <p>This assignment focuses on page layout techniques using Flexbox. We learned how to arrange content dynamically based on screen size.</p>
+                    <a href="assignments/assignment 03/index.html">View Assignment</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+      <p>@Mauriceiono.com</p>
+    </footer>
+</body>
 </html>
