changed my main page color

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -27,7 +27,7 @@
                 <!-- Assignment 1 -->
                 <div class="assignment">
                     <h3>Assignment 1 - Basic HTML</h3>
-                    <img src="https://via.placeholder.com/300x150" alt="Placeholder image for Assignment 1">
+                    <img src="images/assignment 1 page.png" alt=" Assignment 01 Basic HTML">
                     <p>This assignment covers the basics of HTML. We learned how to structure a webpage using various HTML tags and elements.</p>
                     <a href="assignments/assignment 1/index.html">View Assignment</a>
                 </div>
@@ -35,7 +35,7 @@
                 <!-- Assignment 2 -->
                 <div class="assignment">
                     <h3>Assignment 2 - Basic CSS</h3>
-                    <img src="https://via.placeholder.com/300x150" alt="Placeholder image for Assignment 2">
+                    <img src="images/assignment 2 page.png" alt=" Assignment 02 Basic CSS">
                     <p>This assignment introduces CSS. We learned how to style HTML elements and create a visually appealing webpage layout.</p>
                     <a href="assignments/assignment 2/index.html">View Assignment</a>
                 </div>
@@ -43,7 +43,7 @@
                 <!-- Assignment 3 -->
                 <div class="assignment">
                     <h3>Assignment 3 - Page Layout</h3>
-                    <img src="https://via.placeholder.com/300x150" alt="Placeholder image for Assignment 3">
+                    <img src="images/assignment 3 page.png" alt=" Assignment 03 PageLayout">
                     <p>This assignment focuses on page layout techniques using Flexbox. We learned how to arrange content dynamically based on screen size.</p>
                     <a href="assignments/assignment 03/index.html">View Assignment</a>
                 </div>
