added projects section

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -50,6 +50,13 @@
             </div>
         </section>
     </main>
+  
+    <!-- Projects Section -->
+    <section class="projects-link">
+        <h2>Projects</h2>
+        <p>Check out the various projects we will be working on throughout the course.</p>
+        <a href="projects/index.html" class="button-link">View Projects</a>
+    </section>
 
     <!-- Footer Section -->
     <footer>
