added 4th assignment

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -50,6 +50,17 @@
             </div>
         </section>
     </main>
+
+               <!-- Assignment 4 -->
+               <div class="assignment">
+                <h3>Assignment 4 - Recreate CSS Page</h3>
+                <img src="images/assignment 3 page.png" alt=" Assignment 04 Receate CSS">
+                <p>This assignment focuses on Recreating USC mainpage.</p>
+                <a href="assignments/assignment_04/index.html">View Assignment</a>
+            </div>
+        </div>
+    </section>
+</main>
   
     <!-- Projects Section -->
     <section class="projects-link">
