--- a/csce242/index.html
+++ b/csce242/index.html
@@ -54,7 +54,7 @@
                <!-- Assignment 4 -->
                <div class="assignment">
                 <h3>Assignment 4 - Recreate CSS Page</h3>
-                <img src="images/assignment 3 page.png" alt=" Assignment 04 Receate CSS">
+                <img src="images/Screenshot 2024-09-08 184552.png" alt=" Assignment 04 Receate CSS">
                 <p>This assignment focuses on Recreating USC mainpage.</p>
                 <a href="assignments/assignment_04/index.html">View Assignment</a>
             </div>
