--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -26,15 +26,19 @@
             <div class="project-list">
                 <!-- Project 1 -->
                 <div class="project">
-                    <h3>Project 1 - Initial Topic (PDF)</h3>
+                    <h3>Part 1 - Initial Topic (PDF)</h3>
                     <iframe src="part 1/Topic selection.pdf" width="100%" height="300px" title="Project 1 Topic PDF"></iframe>
                     <p>This project introduces the chosen topic. The PDF provides a detailed overview of what the project will entail.</p>
                 </div>
 
                 <!-- Project 1 Wireframe -->
                 <div class="project">
-                    <h3>Project 1 - Wireframe</h3>
-                    <iframe src="wireframe.html" width="100%" height="400px" title="Project 1 Wireframe"></iframe>
+                    <h3> Part 2 - Wireframe</h3>
+                    <iframe src="https://mockitt.wondershare.com/proto/GXllEaL1sjink3Rwtqv/embed/v2/sharing?view_mode=read_only" 
+                    width="100%" height="400px" 
+                    title="Project 2 Wireframe" 
+                    allowTransparency="true" frameborder="0"></iframe>
+                    
                     <p>This wireframe provides a visual layout of the project design. It is embedded directly into the website.</p>
                 </div>
             </div>
