--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -31,15 +31,11 @@
                     <p>This project introduces the chosen topic. The PDF provides a detailed overview of what the project will entail.</p>
                 </div>
 
-                <!-- Project 1 Wireframe -->
+                <!-- Link to Wireframe Page -->
                 <div class="project">
-                    <h3> Part 2 - Wireframe</h3>
-                    <iframe src="https://mockitt.wondershare.com/proto/GXllEaL1sjink3Rwtqv/embed/v2/sharing?view_mode=read_only" 
-                    width="100%" height="400px" 
-                    title="Project 2 Wireframe" 
-                    allowTransparency="true" frameborder="0"></iframe>
-                    
-                    <p>This wireframe provides a visual layout of the project design. It is embedded directly into the website.</p>
+                    <h3>Part 2 - Wireframe</h3>
+                    <p>Click below to view the wireframe assignment on its own page.</p>
+                    <a href="part 2/index.html">View Wireframe</a>
                 </div>
             </div>
         </section>
