wireframe assignment redone

--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -34,7 +34,7 @@
                 <!-- Link to Wireframe Page -->
                 <div class="project">
                     <h3>Part 2 - Wireframe</h3>
-                    <p>Click below to view the wireframe assignment on its own page.</p>
+                    <p>Click below to view the wireframe assignment</p>
                     <a href="part 2/index.html">View Wireframe</a>
                 </div>
             </div>
