--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -34,6 +34,7 @@
                 <!-- Link to Wireframe Page -->
                 <div class="project">
                     <h3>Part 2 - Wireframe</h3>
+                    <img src="https://place-hold.it/200x200" alt=" Wireframe assignment">
                     <p>Click below to view the wireframe assignment</p>
                     <a href="part 2/index.html">View Wireframe</a>
                 </div>
