project part 3 added

--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -38,13 +38,24 @@
                     <p>Click below to view the wireframe assignment</p>
                     <a href="part 2/index.html">View Wireframe</a>
                 </div>
-            </div>
-        </section>
-    </main>
+                </div>
+             </section>
+         </main> 
+
+                <!-- Link to Wireframe Page -->
+                <div class="project">
+                    <h3>Part 3 - HTML & CSS</h3>
+                    <img src="https://place-hold.it/200x200" alt=" Wireframe assignment">
+                    <p>Click below to view the wireframe assignment in CSS and HTML</p>
+                    <a href="part 3/index.html">View Wireframe</a>
+                </div>
+             </div>
+            </section>
+            </main> 
 
     <!-- Footer Section -->
     <footer>
       <p>@Mauriceiono.com</p>
     </footer>
 </body>
-</html>
+</html>ml
